# voice-ime

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
frontend/: app.js  index.html  style.css
frontend/audio/: pcm-capture-processor.js
scripts/: download_model.ps1  download_model.sh  vendor_rnnoise.ps1  vendor_rnnoise.sh
server/: asr_worker.cpp  asr_worker.hpp  audio_vad.cpp  audio_vad.hpp  main.cpp  protocol.hpp  session.cpp  session.hpp  text_convert.cpp  text_convert.hpp  text_quality.cpp  text_quality.hpp  thread_pool.cpp  thread_pool.hpp  websocket_server.cpp  websocket_server.hpp
